# cano

./: .dockerignore  .gitignore  AI_USAGE_POLICY.md  CONCURRENT_WORKFLOW.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  docs.yml  e2e.yml  examples.yml
benches/: cow_performance.rs  flow_performance.rs  node_performance.rs  resource_performance.rs  store_performance.rs  store_shared_performance.rs  task_performance.rs  workflow_performance.rs
cano/: Cargo.toml
cano-e2e/: Cargo.toml  Dockerfile  README.md
cano-e2e/src/: lib.rs
cano-e2e/tests/: e2e.rs
cano-macros/: Cargo.toml
cano-macros/src/: async_rewrite.rs  attr_args.rs  batch_task_impl.rs  checkpoint_store_impl.rs  compensatable_task_impl.rs  from_resources.rs  lib.rs  node_impl.rs  path_prefix.rs  poll_task_impl.rs  resource_derive.rs  router_task_impl.rs  stepped_task_impl.rs  stream_task_impl.rs  task_impl.rs  timer_task_impl.rs
cano-macros/tests/: basic.rs  batch_task_impl.rs  checkpoint_store_impl.rs  compensatable_task_impl.rs  default_body.rs  derive_from_resources.rs  derive_resource.rs  generic.rs  node_impl_inference.rs  poll_task_impl.rs  router_task_impl.rs  stepped_task_impl.rs  stream_task_impl.rs  task_impl_name.rs  timer_task_impl.rs
cano/benches/: circuit_performance.rs  node_performance.rs  rate_limiter_performance.rs  resource_performance.rs  store_performance.rs  store_shared_performance.rs  task_performance.rs  workflow_performance.rs
cano/examples/: ai_workflow_yes_and.rs  batch_task.rs  circuit_breaker.rs  circuit_breaker_manual.rs  custom_checkpoint_store.rs  join_strategies.rs  metrics_demo.rs  metrics_tracing_context.rs  mixed_workflow.rs  observer_metrics.rs  panic_safety.rs  poll_retry_on_error.rs  poll_task.rs  processing_models_tour.rs  rate_limiter.rs  rate_limiter_multi.rs  resources_advanced.rs  router_task.rs  saga_payment.rs  saga_recovery.rs  scheduler_backoff.rs  scheduler_book_prepositions.rs  scheduler_cancellation.rs  scheduler_duration_scheduling.rs  scheduler_graceful_shutdown.rs  scheduler_mapreduce_books.rs  scheduler_mixed_workflows.rs  scheduler_scheduling.rs  split_bulkhead.rs  stepped_task.rs  store_custom_backend.rs  stream_task.rs  task_interface_demo.rs  task_simple.rs  testing_helpers.rs  timer_task.rs  tracing_demo.rs  workflow_ad_exchange.rs  workflow_bare.rs  workflow_book_prepositions.rs  (+13 more)
cano/examples/shared/: book_corpus.rs
cano/src/: cancel.rs  circuit.rs  error.rs  lib.rs  metrics.rs  node.rs  observer.rs  rate_limit.rs  recovery.rs  resource.rs  saga.rs  scheduler.rs  store.rs  task.rs  testing.rs  tracing_tests.rs  workflow.rs
cano/src/recovery/: mod.rs  redb.rs
cano/src/scheduler/: backoff.rs  builder.rs  loops.rs  mod.rs  running.rs  test_support.rs
cano/src/store/: error.rs  memory.rs  mod.rs
cano/src/task/: batch.rs  node.rs  poll.rs  retry.rs  router.rs  stepped.rs  stream.rs  timer.rs
cano/src/workflow/: compensation.rs  execution.rs  join.rs  test_support.rs
cano/tests/: cancellation.rs  recovery_e2e.rs  recovery_hardening.rs  recovery_version_compat.rs  saga_hardening.rs  scheduler_cancellation.rs  stepped_resume_e2e.rs  testing_module_e2e.rs  testing_state_coverage.rs  timer_task_e2e.rs  tracing_tests.rs
docs/: 404.html  config.toml  content-component.js  index.html  menu-component.js  nodes.html  resources.html  scheduler.html  script.js  store.html  styles.css  task.html  tracing.html  workflows.html
docs/content/: _index.md  batch-task.md  home.html  metrics.md  nodes.html  nodes.md  observers.md  poll-task.md  recovery.md  resilience.md  resources.md  router-task.md  saga.md  scheduler.html  scheduler.md  split-join.md  stepped-task.md  store.md  task.html  task.md  tracing.html  tracing.md  workflows.html  workflows.md
docs/content/batch-task/: _index.md
docs/content/metrics/: _index.md
docs/content/observers/: _index.md
docs/content/poll-task/: _index.md
docs/content/recovery/: _index.md
docs/content/resilience/: _index.md  circuit-breakers.md  rate-limiting.md
docs/content/resources/: _index.md  lifecycle-and-concurrency.md
docs/content/router-task/: _index.md
docs/content/saga/: _index.md
docs/content/scheduler/: _index.md  backoff-and-trip.md
docs/content/split-join/: _index.md  join-strategies.md  parallel-patterns.md
docs/content/stepped-task/: _index.md
docs/content/store/: _index.md
docs/content/stream-task/: _index.md
docs/content/task/: _index.md  configuration.md
docs/content/testing/: _index.md
docs/content/timer-task/: _index.md
docs/content/tracing/: _index.md
docs/content/workflows/: _index.md  validation-and-errors.md
docs/static/: script.js  styles.css
docs/superpowers/plans/: 2026-05-12-metrics-integration.md
docs/templates/: 404.html  base.html  index.html  page.html  section.html
docs/templates/shortcodes/: cano_dep.html
examples/: ai_workflow_yes_and.rs  book_prepositions.rs  concurrent_flows.rs  concurrent_workflow_example.rs  flow_simple.rs  mixed_workflow.rs  negotiation.rs  negotiaton.rs  scheduler_book_prepositions.rs  scheduler_concurrent_workflows.rs  scheduler_duration_scheduling.rs  scheduler_graceful_shutdown.rs  scheduler_mapreduce_books.rs  scheduler_mixed_workflows.rs  scheduler_scheduling.rs  simple.rs  stream_concurrent_flows.rs  stream_duration_scheduling.rs  stream_graceful_shutdown.rs  stream_scheduling.rs  task_interface_demo.rs  task_simple.rs  tracing_demo.rs  workflow_ad_exchange.rs  workflow_bare.rs  workflow_book_prepositions.rs  workflow_concurrent.rs  workflow_concurrent_book_prepositions.rs  workflow_negotiation.rs  workflow_on_request.rs  workflow_partial_results.rs  workflow_resources.rs  workflow_simd_matrix_pipeline.rs  workflow_simple.rs  workflow_split_join.rs  workflow_stack_store.rs
src/: error.rs  flow.rs  lib.rs  node.rs  resource.rs  scheduler.rs  scheduler_old_backup.rs  stream.rs  task.rs  tracing_tests.rs  workflow.rs
src/store/: error.rs  memory.rs  mod.rs
