[workspace]
resolver = "3"
members = ["cano", "cano-macros"]

[workspace.package]
version = "0.10.1"
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
homepage = "https://nassor.github.io/cano/"
repository = "https://github.com/nassor/cano"
authors = ["Nassor Frazier-Silva <nassor@gmail.com>"]
