[workspace]
resolver = "3"
members = ["cano", "cano-macros", "cano-e2e"]
# `cano-e2e` pulls in heavy Docker/Postgres test deps — keep it out of the default
# `cargo build` / `cargo test` selection; run it explicitly with `-p cano-e2e`.
default-members = ["cano", "cano-macros"]

[workspace.package]
version = "0.13.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
homepage = "https://nassor.github.io/cano/"
repository = "https://github.com/nassor/cano"
authors = ["Nassor Frazier-Silva <nassor@gmail.com>"]
